--- a/index.html
+++ b/index.html
@@ -8,10 +8,42 @@
 </head>
 
 <body>
+  <h1>TASTY FOODS</h1>
   <h2>Success!</h2>
+	<ul>
+		<li><a href="vegan.html">VEGAN</a></li>
+		<li><a href="vege.html">VEGE</a></li>
+		<li><a href="pedcs.html">PESCATARTIAN</a></li>
+		<li><a href="carna.html">CARNIVORE</a></li>
+	</ul>
+	<select>
+		<option>CHICKEN</option>
+		<option>BEEF</option>
+		<option>CTATERs</option>
+		<option>CHICKEN</option>
+		<option>CHICKEN</option>
+	</select>
 
+	<select>
+		<option>CHICKEN</option>
+		<option>BEEF</option>
+		<option>CTATERs</option>
+		<option>CHICKEN</option>
+		<option>CHICKEN</option>
+	</select>
+
+	<select>
+		<option>CHICKEN</option>
+		<option>BEEF</option>
+		<option>CTATERs</option>
+		<option>CHICKEN</option>
+		<option>CHICKEN</option>
+	</select>
+
+	<button>SEARCH</button>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="./js.js"></script>
 </body>
 
 </html>
+
