--- a/index.html
+++ b/index.html
@@ -1,49 +1,94 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Simple Start Point</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css.css">
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-</head>
+<html lang="en">
+    <head>
+        <title>TheRecipeLab</title>
 
-<body>
-  <h1>TASTY FOODS</h1>
-  <h2>Success!</h2>
-	<ul>
-		<li><a href="vegan.html">VEGAN</a></li>
-		<li><a href="vege.html">VEGE</a></li>
-		<li><a href="pedcs.html">PESCATARTIAN</a></li>
-		<li><a href="carna.html">CARNIVORE</a></li>
-	</ul>
-	<select>
-		<option>CHICKEN</option>
-		<option>BEEF</option>
-		<option>CTATERs</option>
-		<option>CHICKEN</option>
-		<option>CHICKEN</option>
-	</select>
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="./methods.js"></script>
 
-	<select>
-		<option>CHICKEN</option>
-		<option>BEEF</option>
-		<option>CTATERs</option>
-		<option>CHICKEN</option>
-		<option>CHICKEN</option>
-	</select>
+        <style>
+        </style>
+        
+        <link rel="stylesheet" type="text/css" href="style1.css">
 
-	<select>
-		<option>CHICKEN</option>
-		<option>BEEF</option>
-		<option>CTATERs</option>
-		<option>CHICKEN</option>
-		<option>CHICKEN</option>
-	</select>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<button>SEARCH</button>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="./js.js"></script>
-</body>
+    </head>
+    <body><br>
 
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <br>
+
+
+<h1><b>The Recipe Lab</b></h1>
+
+
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="about.asp">About</a></li>
+  <i class="fa fa-envelope" style="font-size:25px;color:white;"></i>
+  <i class="fa fa-twitter" style="font-size:25px;color:white;"></i>
+  <i class="fa fa-instagram" style="font-size:25px;color:white;"></i>
+  <i class="fa fa-facebook" style="font-size:25px;color:white;"></i>
+</ul> 
+
+
+ <div class="container">
+
+<br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <br>
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <h1><b> <a href="html for list of recipes.html" class="nav-link">CHICKEN & BEEF</a> </b></h1>
+      </div>
+
+      <div class="item">
+        <h1><b> <a href="butter chicken.html" class="nav-link">SEAFOOD</a></b></h1>
+      </div>
+
+      <div class="item">
+        <h1><b> <a href="beef and bean hotpot.html" class="nav-link">VEGETARIAN</a></b></h1>
+      </div>
+
+      <div class="item">
+        <h1><b> <a href="bobotie.html" class="nav-link">DESSERT</a></b></h1>
+      </div>
+
+      <div class="item">
+        <h1><b> <a href="beef stroganoff.html" class="nav-link">IN TO THE LAB!</a></b></h1>
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+    </body>
 </html>
-
