--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="item">
-        <h1><b> <a href="butter chicken.html" class="nav-link">SEAFOOD</a></b></h1>
+        <h1><b> <a href="seafood list.html" class="nav-link">SEAFOOD</a></b></h1>
       </div>
 
       <div class="item">
