--- a/html for list of recipes.html
+++ b/html for list of recipes.html
@@ -15,6 +15,8 @@
         
         <link rel="stylesheet" type="text/css" href="style2.css">
 
+        <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Cabin+Sketch" rel="stylesheet">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
