--- a/seafood list.html
+++ b/seafood list.html
@@ -46,7 +46,7 @@
             <div id="recipe-1" class="col-sm-3">
                     <div class="box">
                       <a href="Caribbean-Tuna-Salad.html">
-                        <img src="Caribbean-Tuna-Salad-Vin.jpeg" style="width:300px;height:300px;">
+                        <img src="Caribbean-Tuna-Salad-Vin.jpg" style="width:300px;height:300px;">
                       </a>
                         <h4><strong>Caribbean Tuna Salad</strong></h4>
                     </div>
@@ -55,7 +55,7 @@
             <div id="recipe-2" class="col-sm-3">
                     <div class="box">
                       <a href="Fishcake.html">
-                        <img src="Fishcake.jpeg" style="width:300px;height:300px;">
+                        <img src="Fishcake.jpg" style="width:300px;height:300px;">
                       </a>
                         <h4><strong>Fishcake</strong></h4>
                     </div>
@@ -64,7 +64,7 @@
             <div id="recipe-3" class="col-sm-3">
                     <div class="box">
                       <a href="Shrimp-Gazpacho.html">
-                        <img src="shrimp-gazpacho-by-lynda-balslev.jpeg" style="width:300px;height:300px;">
+                        <img src="shrimp-gazpacho-by-lynda-balslev.jpg" style="width:300px;height:300px;">
                       </a>
                         <h4><strong>Shrimp Gazpacho</strong></h4>
                     </div>
@@ -73,7 +73,7 @@
             <div id="recipe-4" class="col-sm-3">
                     <div class="box">
                       <a href="Tuna-Rice-Salad.html">
-                        <img src="Tuna-Rice-Salad.jpeg" style="width:300px;height:300px;">
+                        <img src="Tuna-Rice-Salad.jpg" style="width:300px;height:300px;">
                       </a>
                         <h4><strong>Tuna Rice Salad</strong></h4>
                     </div>
