Chicken recipes ready

--- a/05 Vegetarian/Baked butternut squash and sage risotto.html
+++ b/05 Vegetarian/Baked butternut squash and sage risotto.html
@@ -14,6 +14,8 @@
             <li class="difficulty">Easy</li>   
             </ul> 
 
+            <img src='baked butternut squash and sage risotto.jpg'>
+
             <h2>Ingredients</h2>
 
             <span class="teaser_large">"This delicious baked risotto is sure to use up the ingredients deep in the forgotten drawers of your kitchen and it's easy to make- winner!"</span>
