--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="item">
-        <h1><b> <a href="bobotie.html" class="nav-link">DESSERT</a></b></h1>
+        <h1><b> <a href="dessert list.html" class="nav-link">DESSERT</a></b></h1>
       </div>
 
       <div class="item">
