--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="item">
-        <h1><b> <a href="beef and bean hotpot.html" class="nav-link">VEGETARIAN</a></b></h1>
+        <h1><b> <a href="vegetarian list.html" class="nav-link">VEGETARIAN</a></b></h1>
       </div>
 
       <div class="item">
