--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -57,7 +57,7 @@
                       <a href="Baked butternut squash and sage risotto.html">
                         <img src="Baked butternut squash and sage risotto.jpg" style="width:300px;height:300px;">
                       </a>
-                        <h4><strong>Bake Butternet Squash & Sage Risotto</strong></h4>
+                        <h4><strong>Butternut Squash & Sage Risotto</strong></h4>
                     </div>
             </div>
 
