--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <h1><b> <a href="chicken beef list.html" class="nav-link">CHICKEN & BEEF</a> </b></h1>
+        <h1><b> <a href="CBL.html" class="nav-link">CHICKEN & BEEF</a> </b></h1>
       </div>
 
       <div class="item">
