--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -33,17 +33,14 @@
 
 <ul>
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
-   <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
-   <div class="dropdown">
-    <button class="dropbtn">Dropdown 
-      <i class="fa fa-caret-down"></i>
-    </button>
+   <i class="fa fa-bars" style="font-size:25px;color:white;">
     <div class="dropdown-content">
       <a href="CBL.html">Chicken & Beef</a>
       <a href="seafood list.html">Seafood</a>
       <a href="dessert list.html">Dessert</a>
       <a href="into the lab.html">Into The Lab</a>
     </div>
+  </i>
    
 </ul> 
 
