--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -33,15 +33,18 @@
 
 <ul>
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
-   <i class="fa fa-bars" style="font-size:25px;color:white;">
+    <div class="dropdown">
+    <button class="dropbtn">
+      <i class="fa fa-caret-bars"></i>
+    </button>
     <div class="dropdown-content">
       <a href="CBL.html">Chicken & Beef</a>
       <a href="seafood list.html">Seafood</a>
       <a href="dessert list.html">Dessert</a>
       <a href="into the lab.html">Into The Lab</a>
     </div>
-  </i>
-   
+  </div>
+
 </ul> 
 
 <div id="Recipes" class="col-sx-12 text-center">
