--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -32,6 +32,7 @@
 
 
 <ul>
+  <div class="navbar">
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
     <div class="dropdown">
     <button class="dropbtn">
@@ -44,6 +45,10 @@
       <a href="into the lab.html">Into The Lab</a>
     </div>
   </div>
+
+<a href="javascript:void(0);" onclick="openMenu()" id="menuButton" title="Open Menu" class="w3-dropdown-click w3-button w3-bar-item topnav-icons fa fa-menu" style="font-size:28px;color:#999999;margin-top:-2px"></a>
+
+  
 
 </ul> 
 
