--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -30,13 +30,12 @@
 
 <h1><b>The Recipe Lab</b></h1>
 
-
 <ul>
   <div class="navbar">
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
-    <div class="dropdown">
+  <div class="dropdown">
     <button class="dropbtn">
-      <i class="fa fa-caret-bars"></i>
+      <i class="fa fa-caret-bars" style="font-size:25px;color:white;"></i>
     </button>
     <div class="dropdown-content">
       <a href="CBL.html">Chicken & Beef</a>
@@ -45,11 +44,7 @@
       <a href="into the lab.html">Into The Lab</a>
     </div>
   </div>
-
-<a href="javascript:void(0);" onclick="openMenu()" id="menuButton" title="Open Menu" class="w3-dropdown-click w3-button w3-bar-item topnav-icons fa fa-menu" style="font-size:28px;color:#999999;margin-top:-2px"></a>
-
-  
-
+</div>
 </ul> 
 
 <div id="Recipes" class="col-sx-12 text-center">
