--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -32,7 +32,7 @@
 
 <ul>
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
-  <i class="fa fa-caret-bars" style="font-size:25px;color:white;"></i>
+  <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
 </ul> 
 
 <div id="Recipes" class="col-sx-12 text-center">
