--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -70,10 +70,10 @@
 
             <div id="recipe-4" class="col-sm-3">
                     <div class="box">
-                      <a href="Tuna-Rice-Salad.html">
-                        <img src="Tuna-Rice-Salad.jpg" style="width:300px;height:300px;">
+                      <a href="Sweet Potato, Black Bean and Chickpea Chilli.html">
+                        <img src="Sweet potato.jpg" style="width:300px;height:300px;">
                       </a>
-                        <h4><strong>Tuna Rice Salad</strong></h4>
+                        <h4><strong>Sweet Potato & Chickpea Chilli</strong></h4>
                     </div>
             </div>
 
