--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -46,7 +46,7 @@
                       <a href="Asparagus & new potato frittata.html">
                         <img src="asparagus-new-potato-frittata.jpg" style="width:300px;height:300px;">
                       </a>
-                        <h4><strong>Asparagus & New Potato Frittata</strong></h4>
+                        <h4><strong>Asparagus & Potato Frittata</strong></h4>
                     </div>
             </div>
 
@@ -55,7 +55,7 @@
                       <a href="Baked butternut squash and sage risotto.html">
                         <img src="Baked butternut squash and sage risotto.jpg" style="width:300px;height:300px;">
                       </a>
-                        <h4><strong>Butternut Squash & Sage Risotto</strong></h4>
+                        <h4><strong>Butternut & Sage Risotto</strong></h4>
                     </div>
             </div>
 
@@ -64,7 +64,7 @@
                       <a href="Best veggie stir fry with egg fried rice.html">
                         <img src="Best veggie stir fry with egg fried rice.jpg" style="width:300px;height:300px;">
                       </a>
-                        <h4><strong>Veggie Stir-fry with Egg Fried Rice</strong></h4>
+                        <h4><strong>Veggie Stir-fry & Fried Rice</strong></h4>
                     </div>
             </div>
 
