--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 
 <ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
+  <li><a href="https://therecipelab.github.io/">Home</a></li>
+  <li><a href=blob/master/About.html">About</a></li>
   <li><a href="about.asp">About</a></li>
   <i class="fa fa-envelope" style="font-size:25px;color:white;"></i>
   <i class="fa fa-twitter" style="font-size:25px;color:white;"></i>
