--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <ul>
   <li><a href="https://therecipelab.github.io/">Home</a></li>
-  <li><a href=blob/master/About.html">About</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href=https://github.com/therecipelab/therecipelab.github.io/blob/master/About.html">About</a></li>
+  <li><a href="https://github.com/therecipelab/therecipelab.github.io/blob/master/contactus.html.html">Contact us</a></li>
   <i class="fa fa-envelope" style="font-size:25px;color:white;"></i>
   <i class="fa fa-twitter" style="font-size:25px;color:white;"></i>
   <i class="fa fa-instagram" style="font-size:25px;color:white;"></i>
