--- a/dessert list.html
+++ b/dessert list.html
@@ -57,7 +57,7 @@
                       <a href="Butterfinger Whoopie.html">
                         <img src="Butterfinger Whoopie.jpg" style="width:300px;height:300px;">
                       </a>
-                        <h4><strong>Butterfinget Whoopie</strong></h4>
+                        <h4><strong>Butterfinger Whoopie</strong></h4>
                     </div>
             </div>
 
