--- a/About.html
+++ b/About.html
@@ -76,7 +76,7 @@
     			<div class="col-sm-1">
     			</div>
     			<div class="col-lg-3 text-centre">
-    				<img src="http://placehold.it/300x300" class="img-responsive">
+    				<img src="Uswah.jpg" class="img-responsive">
     				<h3>Uswah Ayyaz
     				<small>Data Scientist</small>
     				</h3>
@@ -84,7 +84,7 @@
 				<div class="col-sm-1">
     			</div>
     			<div class="col-lg-3">
-    				<img src="http://placehold.it/300x300" class="img-responsive">
+    				<img src="Olivia" class="img-responsive">
     				<h3>Olivia Espinosa Trujillo
     				<small>Architect</small>
     				</h3>
@@ -92,7 +92,7 @@
 				<div class="col-sm-1">
     			</div>
     			<div class="col-lg-3">
-    				<img src="http://placehold.it/300x300" class="img-responsive">
+    				<img src="Ameera.jpeg" class="img-responsive">
     				<h3>Ameera Syafiqah
     				<small>Biomedical Scientist</small>
     				</h3>
