--- a/seafood list.html
+++ b/seafood list.html
@@ -32,7 +32,9 @@
 
 
 <ul>
+  <a href="index.html">
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
+</a>
    <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
    
 </ul> 
