--- a/About.html
+++ b/About.html
@@ -84,7 +84,7 @@
 				<div class="col-sm-1">
     			</div>
     			<div class="col-lg-3">
-    				<img src="Olivia" class="img-responsive">
+    				<img src="Olivia.jpg" class="img-responsive">
     				<h3>Olivia Espinosa Trujillo
     				<small>Architect</small>
     				</h3>
