--- a/About.html
+++ b/About.html
@@ -76,7 +76,7 @@
     			<div class="col-sm-1">
     			</div>
     			<div class="col-lg-3 text-centre">
-    				<img src="Uswah.jpg" class="img-responsive">
+    				<img src="Uswah.JPG" class="img-responsive">
     				<h3>Uswah Ayyaz
     				<small>Data Scientist</small>
     				</h3>
