--- a/seafood list.html
+++ b/seafood list.html
@@ -32,16 +32,15 @@
 
 
 <ul>
-  <a href="index.html">
   <i class="fa fa-home" style="font-size:25px;color:white;"></i>
+  <a href="index.html">
 </a>
    <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
-   
-</ul> 
 
-<div id="Recipes" class="col-sx-12 text-center">
-        <h2 class="h2-color">Seafood Recipes</h2>
-      </div>
+<div class="navbar">
+  <a href="index.html">
+    <i class="fa fa-home" style="font-size:30px;color:white;"></i>
+  </a>
 
 <section id="main-content" class="col-sm-12">
         <div class="view-content">
