--- a/About.html
+++ b/About.html
@@ -94,7 +94,7 @@
     			<div class="col-lg-3">
     				<img src="Ameera.jpeg" class="img-responsive">
     				<h3>Ameera Syafiqah
-    				<small>Biomedical Scientist</small>
+    				<small>Scientist</small>
     				</h3>
     			</div>
     		</div>
