--- a/seafood list.html
+++ b/seafood list.html
@@ -32,13 +32,12 @@
 
 
 <ul>
-  <i class="fa fa-home" style="font-size:25px;color:white;"></i>
-  <a href="index.html">
-</a>
+  <i class="fa fa-home" style="font-size:25px;color:white;"><a href="index.html">Home</a></i>
    <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
 
 <div class="navbar">
   <a href="index.html">
+      
     <i class="fa fa-home" style="font-size:30px;color:white;"></i>
   </a>
 
