--- a/seafood list.html
+++ b/seafood list.html
@@ -32,7 +32,7 @@
 
 
 <ul>
-  <i class="fa fa-home" style="font-size:25px;color:white;"><a href="index.html">Home</a></i>
+  <i class="fa fa-home" style="font-size:25px;color:white;"></i>
    <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
 </ul>
 
