--- a/seafood list.html
+++ b/seafood list.html
@@ -32,10 +32,13 @@
 
 
 <ul>
-  <i class="fa fa-home" style="font-size:25px;color:white;"></i>
+  <a href="index.html"><i class="fa fa-home" style="font-size:25px;color:white;"></i></a>
    <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
 </ul>
 
+<div id="Recipes" class="col-sx-12 text-center">
+        <h2 class="h2-color">Chicken & Beef Recipes</h2>
+      </div>
 <section id="main-content" class="col-sm-12">
         <div class="view-content">
             <div id="recipe-1" class="col-sm-3">
