--- a/seafood list.html
+++ b/seafood list.html
@@ -37,7 +37,7 @@
 </ul>
 
 <div id="Recipes" class="col-sx-12 text-center">
-        <h2 class="h2-color">Chicken & Beef Recipes</h2>
+        <h2 class="h2-color">Seafood Recipes</h2>
       </div>
 <section id="main-content" class="col-sm-12">
         <div class="view-content">
