--- a/vegetarian list.html
+++ b/vegetarian list.html
@@ -31,7 +31,8 @@
 <h1><b>The Recipe Lab</b></h1>
 
 <ul>
-  <i class="fa fa-home" style="font-size:25px;color:white;"></i>
+  <a href="index.html">
+  <i class="fa fa-home" style="font-size:25px;color:white;"></i></a>
       <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
 </ul> 
 
