--- a/About.html
+++ b/About.html
@@ -24,7 +24,8 @@
 
 
     <ul class="header">
-      <i class="fa fa-home" style="font-size:25px;color:white;"></i>
+        <a href="index.html">
+      <i class="fa fa-home" style="font-size:25px;color:white;"></i></a>
       <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
     </ul> 
 
