--- a/contactus.html.html
+++ b/contactus.html.html
@@ -25,7 +25,8 @@
 
 
     <ul>
-      <i class="fa fa-home" style="font-size:25px;color:white;"></i>
+        <a href="index.html">
+      <i class="fa fa-home" style="font-size:25px;color:white;"></i></a>
       <i class="fa fa-bars" style="font-size:25px;color:white;"></i>
     </ul> 
 
